# OPENAI_AGENTS_SDK

./: 05_tools.ipynb  HandsOff_Agents.ipynb  README.md  guardrials.ipynb  streaming.ipynb
Swarm/: readme.md
ToolCall_Agent/dynamic-problem-solve-agent/: pyproject.toml
UV/project-01/: README.md
fastapi-1/: main.py  pyproject.toml  test_main.py
handsoff_agent/: main.py  pyproject.toml
hello-mcp/: client.py  pyproject.toml
openrouter/OpenRouter_01/: README.md  main.py  pyproject.toml
streaming/: main.py  pyproject.toml
streaming-chatbot/chatbot/: main.py  pyproject.toml
