[project]
name = "handsoff-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
    "chainlit>=2.5.5",
    "langdetect>=1.0.9",
    "openai-agents>=0.0.19",
    "python-dotenv>=1.1.0",
    "runner>=1.1",
]
